add footer html

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="footer">
+  <p class="mt-3">
+    &#169; 2021. Built with lots of love and coffee by
+    <a href="http://obscure-savannah-56809.herokuapp.com/">THiNC</a>
+  </p>
+</div>
